--- a/index.html
+++ b/index.html
@@ -48,17 +48,45 @@
 
     <section id="home" class="hero-section d-flex align-items-center justify-content-center text-white text-center">
         <div class="container">
-            <h1 class="display-1 fw-bold mb-4" style="text-shadow: 2px 2px 8px rgba(0,0,0,0.8);">Welcome to Hogwarts</h1>
-            <p class="lead fs-3 mb-5" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">Explore the Wizarding World of Harry Potter Characters</p>
+            <h1 class="display-1 fw-bold mb-4" style="text-shadow: 2px 2px 8px rgba(0,0,0,0.8);">Welcome to Hogwarts
+            </h1>
+            <p class="lead fs-3 mb-5" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">Explore the Wizarding World of
+                Harry Potter Characters</p>
             <a href="#about" class="btn btn-secondary btn-lg px-5 py-3 shadow-lg rounded-pill">
                 <i class="bi bi-arrow-down me-2"></i>Start Exploring
             </a>
         </div>
     </section>
 
+    <div class="container my-5">
+        <div class="row" id="cardContainer">
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+    <script>
+        var names = ["Harry Potter", "Hermione Granger", "Ron Weasley", "Albus Dumbledore", "Severus Snape"];
+        var pics = ["harry.jpg", "hermione.jpg", "ron.jpg", "dumbledore.jpg", "snape.jpg"];
+
+        var myContainer = document.getElementById("cardContainer");
+        names.forEach((name, i) => {
+            myContainer.innerHTML += `
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card hp-card h-100 border-0" tabindex="0">
+                    <img src="assets/img/${pics[i]}" class="card-img" alt="${name}" loading="lazy">
+                    <div class="card-img-overlay d-flex align-items-end p-0">
+                        <div class="name-overlay">
+                            <h5 class="mb-0">${name}</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>`
+        });
+    </script>
 </body>
 
 </html>
