--- a/index.html
+++ b/index.html
@@ -68,25 +68,8 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-    <script>
-        var names = ["Harry Potter", "Hermione Granger", "Ron Weasley", "Albus Dumbledore", "Severus Snape"];
-        var pics = ["harry.jpg", "hermione.jpg", "ron.jpg", "dumbledore.jpg", "snape.jpg"];
-
-        var myContainer = document.getElementById("cardContainer");
-        names.forEach((name, i) => {
-            myContainer.innerHTML += `
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card hp-card h-100 border-0" tabindex="0">
-                    <img src="assets/img/${pics[i]}" class="card-img" alt="${name}" loading="lazy">
-                    <div class="card-img-overlay d-flex align-items-end p-0">
-                        <div class="name-overlay">
-                            <h5 class="mb-0">${name}</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>`
-        });
-    </script>
+    <script src="assets/js/data.js"></script>
+    <script src="assets/js/populate.js"></script>
 </body>
 
 </html>
