feat: Implement character detail view and house images
Adds a new detail view page (view.html) to display comprehensive
information for selected characters.

The API for fetching character details has been integrated into
`data.js` and the population logic updated in `populate.js`.

Includes all necessary house images to correctly display the
character's house on the new detail page.

Revamp UI and added Toggle Button for light/dark mode

--- a/index.html
+++ b/index.html
@@ -8,61 +8,119 @@
     <link rel="icon" type="image/png" href="assets/img/Hogwarts-Crest.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-light sticky-top shadow-sm border-bottom border-secondary border-3">
+<body class="bg-dark text-light" id="body">
+
+    <nav id="mainNav"
+        class="navbar navbar-expand-lg navbar-dark bg-black sticky-top shadow border-bottom border-secondary border-2 transition-colors">
         <div class="container">
-            <a class="navbar-brand fw-bold text-primary d-flex align-items-center" href="#">
-                <img src="assets/img/logo.png" alt="Harry Potter Logo" width="auto" height="52" class="me-2">
+            <a class="navbar-brand fw-bold text-warning d-flex align-items-center" href="#">
+                <img src="assets/img/logo.png" alt="Harry Potter Logo" height="50" class="me-3">
+                <span class="d-none d-sm-block" style="font-family: serif; letter-spacing: 1px;">WIZARDING WORLD</span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+
+            <div class="d-flex align-items-center order-lg-3 ms-lg-3">
+                <button id="themeToggle" class="btn btn-link nav-link text-warning fs-5" onclick="toggleTheme()"
+                    aria-label="Toggle Dark Mode">
+                    <i class="bi bi-moon-stars-fill" id="themeIcon"></i>
+                </button>
+            </div>
+
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto text-uppercase small fw-bold letter-spacing-2 mt-3 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="#home">Home</a>
+                        <a class="nav-link nav-link-custom text-warning active" href="#home"
+                            onclick="setActiveLink(this)">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="#about">About</a>
+                        <a class="nav-link nav-link-custom" href="#characters"
+                            onclick="setActiveLink(this)">Directory</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="#regions">Regions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="#food">Dishes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="#culture">Culture</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="#gallery">Gallery</a>
+                        <a class="nav-link nav-link-custom" href="#about" onclick="setActiveLink(this)">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section id="home" class="hero-section d-flex align-items-center justify-content-center text-white text-center">
-        <div class="container">
-            <h1 class="display-1 fw-bold mb-4" style="text-shadow: 2px 2px 8px rgba(0,0,0,0.8);">Welcome to Hogwarts
+    <section id="home" class="d-flex align-items-center justify-content-center text-white text-center position-relative"
+        style="min-height: 90vh; background: url('https://wallpapers.com/images/featured/hogwarts-castle-pictures-0f0g45ihwlijl35w.jpg') center/cover no-repeat fixed;">
+        <div class="position-absolute top-0 start-0 w-100 h-100 bg-black opacity-50"></div>
+        <div class="container position-relative z-1">
+            <img src="assets/img/Hogwarts-Crest.png" width="100" class="mb-4 d-none d-md-inline-block opacity-75">
+            <h1 class="display-1 fw-bold mb-3 text-white"
+                style="font-family: serif; text-shadow: 0 4px 15px rgba(0,0,0,0.9);">
+                Hogwarts Directory
             </h1>
-            <p class="lead fs-3 mb-5" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">Explore the Wizarding World of
-                Harry Potter Characters</p>
-            <a href="#about" class="btn btn-secondary btn-lg px-5 py-3 shadow-lg rounded-pill">
-                <i class="bi bi-arrow-down me-2"></i>Start Exploring
+            <p class="lead fs-4 mb-5 text-light opacity-75" style="max-width: 700px; margin: 0 auto;">
+                The ultimate archive of witches, wizards, and magical creatures from the world of Harry Potter.
+            </p>
+            <a href="#characters"
+                class="btn btn-outline-warning btn-lg px-5 py-3 rounded-0 text-uppercase fw-bold tracking-wider">
+                Enter the Archive
             </a>
         </div>
     </section>
 
-    <div class="container my-5">
-        <div class="row" id="cardContainer">
-        </div>
-    </div>
+    <section id="characters" class="py-5 transition-colors" style="background-color: #121212;">
+        <div class="container py-4">
+            <div class="row mb-5 text-center">
+                <div class="col-12">
+                    <h2 id="charTitle" class="display-5 fw-bold text-white mb-3" style="font-family: serif;">Student &
+                        Staff Records</h2>
+                    <div class="d-flex justify-content-center">
+                        <div class="bg-warning" style="height: 3px; width: 100px;"></div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="row g-4" id="cardContainer">
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="py-5 bg-black border-top border-secondary border-opacity-25 transition-colors">
+        <div class="container">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-lg-8 text-center">
+                    <h2 class="display-6 fw-bold mb-4 text-warning" style="font-family: serif;">About The Project</h2>
+                    <p id="aboutText" class="lead text-secondary mb-4">
+                        This Harry Potter Directory project is a tribute to the beloved wizarding world created by J.K.
+                        Rowling. It serves as a comprehensive archive of characters from the Harry Potter series, providing
+                        fans and enthusiasts with detailed profiles of students, staff, and magical beings associated with
+                        Hogwarts School of Witchcraft and Wizardry. The directory is designed to be user-friendly and
+                        visually appealing, allowing users to easily explore and learn more about their favorite characters.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="mainFooter"
+        class="bg-black text-secondary py-5 border-top border-secondary border-opacity-10 transition-colors">
+        <div class="container">
+            <div class="row g-4 justify-content-between align-items-center">
+                <div class="col-md-6 text-center text-md-start">
+                    <h5 id="footerTitle" class="text-white mb-1">Harry Potter Directory</h5>
+                    <small>&copy; 2025 All rights reserved.</small>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <p id="devText" class="mb-0 text-white-50">Designed & Developed by</p>
+                    <p class="text-warning fw-bold mb-0">Timothy Bibat</p>
+                    <small class="text-warning fw-semibold">BSIT 3-1 • Submitted to: Sir Christopher De Claro</small>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -70,6 +128,99 @@
 
     <script src="assets/js/data.js"></script>
     <script src="assets/js/populate.js"></script>
+
+    <script>
+        function setActiveLink(clickedElement) {
+            const navLinks = document.querySelectorAll('.nav-link-custom');
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                link.classList.remove('text-warning');
+            });
+            clickedElement.classList.add('active');
+            clickedElement.classList.add('text-warning');
+
+            const navbarCollapse = document.getElementById('navbarNav');
+            if (navbarCollapse.classList.contains('show')) {
+                const bsCollapse = new bootstrap.Collapse(navbarCollapse);
+                bsCollapse.hide();
+            }
+        }
+
+        function highlightNavOnScroll() {
+            const sections = document.querySelectorAll('section');
+            const navLinks = document.querySelectorAll('.nav-link-custom');
+
+            let currentSectionId = "";
+
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop;
+                const sectionHeight = section.clientHeight;
+
+                if (window.scrollY >= (sectionTop - 150)) {
+                    currentSectionId = section.getAttribute('id');
+                }
+            });
+
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                link.classList.remove('text-warning');
+                if (link.getAttribute('href').includes(currentSectionId)) {
+                    link.classList.add('active');
+                    link.classList.add('text-warning');
+                }
+            });
+        }
+
+        window.addEventListener('scroll', highlightNavOnScroll);
+
+
+        let isDarkMode = true;
+
+        function toggleTheme() {
+            isDarkMode = !isDarkMode;
+            const body = document.getElementById('body');
+            const nav = document.getElementById('mainNav');
+            const icon = document.getElementById('themeIcon');
+            const charSection = document.getElementById('characters');
+            const charTitle = document.getElementById('charTitle');
+            const aboutSection = document.getElementById('about');
+            const footer = document.getElementById('mainFooter');
+            const footerTitle = document.getElementById('footerTitle');
+            const devText = document.getElementById('devText');
+
+            if (!isDarkMode) {
+                body.classList.replace('bg-dark', 'bg-light');
+                body.classList.replace('text-light', 'text-dark');
+                nav.classList.remove('navbar-dark', 'bg-black');
+                nav.classList.add('navbar-light', 'bg-white');
+                icon.classList.replace('bi-moon-stars-fill', 'bi-sun-fill');
+                charSection.style.backgroundColor = "#f8f9fa";
+                charTitle.classList.replace('text-white', 'text-dark');
+                body.classList.add('light-mode-active');
+                aboutSection.classList.remove('bg-black');
+                aboutSection.classList.add('bg-white');
+                footer.classList.remove('bg-black');
+                footer.classList.add('bg-light');
+                footerTitle.classList.replace('text-white', 'text-dark');
+                devText.classList.replace('text-white-50', 'text-muted');
+            } else {
+                body.classList.replace('bg-light', 'bg-dark');
+                body.classList.replace('text-dark', 'text-light');
+                nav.classList.remove('navbar-light', 'bg-white');
+                nav.classList.add('navbar-dark', 'bg-black');
+                icon.classList.replace('bi-sun-fill', 'bi-moon-stars-fill');
+                charSection.style.backgroundColor = "#121212";
+                charTitle.classList.replace('text-dark', 'text-white');
+                body.classList.remove('light-mode-active');
+                aboutSection.classList.remove('bg-white');
+                aboutSection.classList.add('bg-black');
+                footer.classList.remove('bg-light');
+                footer.classList.add('bg-black');
+                footerTitle.classList.replace('text-dark', 'text-white');
+                devText.classList.replace('text-muted', 'text-white-50');
+            }
+        }
+    </script>
 </body>
 
 </html>
