--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Harry Potter</title>
+    <title>Harry Potter | Wizarding Directory</title>
     <link rel="icon" type="image/png" href="assets/img/Hogwarts-Crest.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -92,13 +92,17 @@
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="display-6 fw-bold mb-4 text-warning" style="font-family: serif;">About The Project</h2>
-                    <p id="aboutText" class="lead text-secondary mb-4">
+                    <h2 id="aboutTitle" class="display-6 fw-bold mb-4 text-warning" style="font-family: serif;">About
+                        The Project</h2>
+                    <p id="aboutText" class="lead text-secondary mb-4" style="text-shadow: 0 0 1px rgba(0, 0, 0, 0.7);">
                         This Harry Potter Directory project is a tribute to the beloved wizarding world created by J.K.
-                        Rowling. It serves as a comprehensive archive of characters from the Harry Potter series, providing
-                        fans and enthusiasts with detailed profiles of students, staff, and magical beings associated with
+                        Rowling. It serves as a comprehensive archive of characters from the Harry Potter series,
+                        providing
+                        fans and enthusiasts with detailed profiles of students, staff, and magical beings associated
+                        with
                         Hogwarts School of Witchcraft and Wizardry. The directory is designed to be user-friendly and
-                        visually appealing, allowing users to easily explore and learn more about their favorite characters.
+                        visually appealing, allowing users to easily explore and learn more about their favorite
+                        characters.
                     </p>
                 </div>
             </div>
@@ -114,9 +118,8 @@
                     <small>&copy; 2025 All rights reserved.</small>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p id="devText" class="mb-0 text-white-50">Designed & Developed by</p>
-                    <p class="text-warning fw-bold mb-0">Timothy Bibat</p>
-                    <small class="text-warning fw-semibold">BSIT 3-1 • Submitted to: Sir Christopher De Claro</small>
+                    <p id="devText" class="mb-0 text-white-50">Website Developed by: <br> Timothy Bibat <br> BSIT 3-1
+                        • Submitted to: Sir Christopher De Claro</p>
                 </div>
             </div>
         </div>
@@ -184,6 +187,7 @@
             const charSection = document.getElementById('characters');
             const charTitle = document.getElementById('charTitle');
             const aboutSection = document.getElementById('about');
+            const aboutText = document.getElementById('aboutText');
             const footer = document.getElementById('mainFooter');
             const footerTitle = document.getElementById('footerTitle');
             const devText = document.getElementById('devText');
@@ -199,6 +203,7 @@
                 body.classList.add('light-mode-active');
                 aboutSection.classList.remove('bg-black');
                 aboutSection.classList.add('bg-white');
+                aboutText.classList.replace('text-secondary', 'text-dark');
                 footer.classList.remove('bg-black');
                 footer.classList.add('bg-light');
                 footerTitle.classList.replace('text-white', 'text-dark');
@@ -214,6 +219,8 @@
                 body.classList.remove('light-mode-active');
                 aboutSection.classList.remove('bg-white');
                 aboutSection.classList.add('bg-black');
+                aboutTitle.classList.replace('text-primary', 'text-warning');
+                aboutText.classList.replace('text-dark', 'text-secondary');
                 footer.classList.remove('bg-light');
                 footer.classList.add('bg-black');
                 footerTitle.classList.replace('text-dark', 'text-white');
