--- a/view.html
+++ b/view.html
@@ -49,7 +49,7 @@
                                             style="width: 60px;">
                                     </div>
 
-                                    <h2 id="charName" class="display-6 fw-bold text-center mb-1 font-serif"></h2>
+                                    <h2 id="charName" class="display-6 fw-bold text-center mb-1" style="font-family: serif;"></h2>
                                     <p id="charHouse" class="text-warning text-uppercase letter-spacing-2 small mb-4">
                                     </p>
 
