removed the harry potter font and music theme

--- a/view.html
+++ b/view.html
@@ -15,24 +15,12 @@
 <body class="bg-dark text-white" style="min-height: 100vh;">
 
     <nav class="navbar navbar-dark bg-black bg-opacity-75 fixed-top">
-        <div class="container d-flex justify-content-between align-items-center">
-
+        <div class="container">
             <a class="navbar-brand text-warning fw-bold" href="index.html">
                 <i class="bi bi-chevron-left me-2"></i>Return to Directory
             </a>
-
-            <div class="d-flex align-items-center">
-                <button id="musicToggle" class="btn btn-link nav-link text-warning fs-5" onclick="toggleMusic()"
-                    aria-label="Toggle Music">
-                    <i class="bi bi-volume-mute-fill" id="musicIcon"></i>
-                </button>
-            </div>
         </div>
     </nav>
-
-    <audio id="bgMusic" loop>
-        <source src="assets/audio/Hedwig's Theme.mp3" type="audio/mpeg">
-    </audio>
 
     <main class="d-flex align-items-center min-vh-100 py-5">
         <div class="container mt-4">
@@ -61,8 +49,7 @@
                                             style="width: 60px;">
                                     </div>
 
-                                    <h2 id="charName" class="display-6 fw-bold text-center mb-1"
-                                        style="font-family: serif;"></h2>
+                                    <h2 id="charName" class="display-6 fw-bold text-center mb-1" style="font-family: serif;"></h2>
                                     <p id="charHouse" class="text-warning text-uppercase letter-spacing-2 small mb-4">
                                     </p>
 
@@ -101,8 +88,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-
-    <script src="assets/js/music.js"></script>
 
     <script>
         const getCharacterDetails = async (characterName) => {
