--- a/index.html
+++ b/index.html
@@ -22,24 +22,12 @@
                 <span class="d-none d-sm-block" style="font-family: serif; letter-spacing: 1px;">WIZARDING WORLD</span>
             </a>
 
-            <div class="d-flex align-items-center order-lg-3 ms-lg-3 gap-2">
-
-                <button id="musicToggle" class="btn btn-link nav-link text-warning fs-5 me-2" onclick="toggleMusic()"
-                    aria-label="Toggle Music">
-                    <i class="bi bi-volume-mute-fill" id="musicIcon"></i>
-                </button>
-
+            <div class="d-flex align-items-center order-lg-3 ms-lg-3">
                 <button id="themeToggle" class="btn btn-link nav-link text-warning fs-5" onclick="toggleTheme()"
                     aria-label="Toggle Dark Mode">
                     <i class="bi bi-moon-stars-fill" id="themeIcon"></i>
                 </button>
-
             </div>
-
-            <audio id="bgMusic" loop>
-                <source src="assets/audio/Hedwig's Theme.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
 
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -131,7 +119,7 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p id="devText" class="mb-0 text-white-50">Website Developed by: <br> Timothy Bibat <br> BSIT 3-1
-                        • Submitted to: Sir Christopher De Claro <br> Music: "Hedwig's Theme" by John Williams</p>
+                        • Submitted to: Sir Christopher De Claro</p>
                 </div>
             </div>
         </div>
@@ -143,7 +131,6 @@
 
     <script src="assets/js/data.js"></script>
     <script src="assets/js/populate.js"></script>
-    <script src="assets/js/music.js"></script>
 
     <script>
         function setActiveLink(clickedElement) {
