replaced the 'Harry Potter Directory' to 'Hogwarts Directory'

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h2 id="aboutTitle" class="display-6 fw-bold mb-4 text-warning" style="font-family: serif;">About
                         The Project</h2>
                     <p id="aboutText" class="lead text-secondary mb-4" style="text-shadow: 0 0 1px rgba(0, 0, 0, 0.7);">
-                        This Harry Potter Directory project is a tribute to the beloved wizarding world created by J.K.
+                        This Hogwarts Directory project is a tribute to the beloved wizarding world created by J.K.
                         Rowling. It serves as a comprehensive archive of characters from the Harry Potter series,
                         providing
                         fans and enthusiasts with detailed profiles of students, staff, and magical beings associated
@@ -114,7 +114,7 @@
         <div class="container">
             <div class="row g-4 justify-content-between align-items-center">
                 <div class="col-md-6 text-center text-md-start">
-                    <h5 id="footerTitle" class="text-white mb-1">Harry Potter Directory</h5>
+                    <h5 id="footerTitle" class="text-white mb-1">Hogwarts Directory</h5>
                     <small>&copy; 2025 All rights reserved.</small>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
