--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             const sections = document.querySelectorAll('section');
             const navLinks = document.querySelectorAll('.nav-link-custom');
 
-            let currentSectionId = "";
+            let currentSectionId = "home";
 
             sections.forEach(section => {
                 const sectionTop = section.offsetTop;
